[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toml_tools"
version = "0.10.2"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A fork of toml, a Python Library for TOML"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"